Added all main section

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -43,56 +43,56 @@
             <ul class="items-products">
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-041.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">Blue Tshirt</p>
                         <p class="price-product">$26</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-042.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">WOMAN shirt</p>
                         <p class="price-product">$31</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-043.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">YELLOW Tshirt</p>
                         <p class="price-product">$21</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-044.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">Cool lingerie</p>
                         <p class="price-product">$56</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-045.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">Blue Tshirt</p>
                         <p class="price-product">$26</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-046.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">WOMAN shirt</p>
                         <p class="price-product">$31</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-047.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">YELLOW Tshirt</p>
                         <p class="price-product">$21</p>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <img src="img/img-048.jpg" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">Cool lingerie</p>
                         <p class="price-product">$56</p>
                     </div>
@@ -104,10 +104,35 @@
             <h2 class="main-title-news">LATEST NEWS</h2>
             <ul class="items-news">
                 <li class="item-news">
-                    <div class="new">
-                        <img src="/" alt="Must be picture" width="350px" height="262px">
-                        <p>Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-                        <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
+                    <div class="news">
+                        <img src="img/Rectangle 32.jpg" alt="Must be picture" width="350px" height="262px">
+                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                        <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet
+                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
+                        <div class="download">
+                            <button class="download-button">Read More</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="item-news">
+                    <div class="news">
+                        <img src="img/Rectangle 33.jpg" alt="Must be picture" width="350px" height="262px">
+                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                        <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet
+                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
+                        <div class="download">
+                            <button class="download-button">Read More</button>
+                        </div>
+                    </div>
+                </li>
+                <li class="item-news">
+                    <div class="news">
+                        <img src="img/Rectangle 34.jpg" alt="Must be picture" width="350px" height="262px">
+                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                        <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet
                             mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
                         <div class="download">
                             <button class="download-button">Read More</button>
