Added all parts of the page

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -142,6 +142,11 @@
             </ul>
         </section>
     </main>
+
+    <footer class="main-footer container">
+        <h2 class="footer-title visually-hidden">Footer Title</h2>
+    </footer>
+
 </body>
 
 </html>
