--- a/module-04/index.html
+++ b/module-04/index.html
@@ -43,58 +43,58 @@
             <ul class="items-products">
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-041.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">Blue Tshirt</p>
-                        <p class="price-product">$26</p>
+                        <a href="#"><img src="img/img-041.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">Blue Tshirt</a>
+                        <a href="#" class="price-product">$26</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-042.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">WOMAN shirt</p>
-                        <p class="price-product">$31</p>
+                        <a href="#"><img src="img/img-042.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">WOMAN shirt</a>
+                        <a href="#" class="price-product">$31</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-043.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">YELLOW Tshirt</p>
-                        <p class="price-product">$21</p>
+                        <a href="#"><img src="img/img-043.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">YELLOW Tshirt</a>
+                        <a href="#" class="price-product">$21</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-044.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">Cool lingerie</p>
-                        <p class="price-product">$56</p>
+                        <a href="#"><img src="img/img-044.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">Cool lingerie</a>
+                        <a href="#" class="price-product">$56</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-045.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">Blue Tshirt</p>
-                        <p class="price-product">$26</p>
+                        <a href="#"><img src="img/img-045.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">Blue Tshirt</a>
+                        <a href="#" class="price-product">$26</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-046.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">WOMAN shirt</p>
-                        <p class="price-product">$31</p>
+                        <a href="#"><img src="img/img-046.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">WOMAN shirt</a>
+                        <a href="#" class="price-product">$31</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-047.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">YELLOW Tshirt</p>
-                        <p class="price-product">$21</p>
+                        <a href="#"><img src="img/img-047.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">YELLOW Tshirt</a>
+                        <a href="#" class="price-product">$21</a>
                     </div>
                 </li>
                 <li class="item-products">
                     <div class="product">
-                        <img src="img/img-048.jpg" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">Cool lingerie</p>
-                        <p class="price-product">$56</p>
+                        <a href="#"><img src="img/img-048.jpg" alt="Must be picture" width="255" height="282"></a>
+                        <a href="#" class="name-product">Cool lingerie</a>
+                        <a href="#" class="price-product">$56</a>
                     </div>
                 </li>
             </ul>
@@ -105,7 +105,7 @@
             <ul class="items-news">
                 <li class="item-news">
                     <div class="news">
-                        <img src="img/Rectangle 32.jpg" alt="Must be picture" width="350px" height="262px">
+                        <img src="img/Rectangle32.jpg" alt="Must be picture" width="350" height="262">
                         <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
                         <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet
@@ -117,7 +117,7 @@
                 </li>
                 <li class="item-news">
                     <div class="news">
-                        <img src="img/Rectangle 33.jpg" alt="Must be picture" width="350px" height="262px">
+                        <img src="img/Rectangle33.jpg" alt="Must be picture" width="350" height="262">
                         <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
                         <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet
@@ -129,7 +129,7 @@
                 </li>
                 <li class="item-news">
                     <div class="news">
-                        <img src="img/Rectangle 34.jpg" alt="Must be picture" width="350px" height="262px">
+                        <img src="img/Rectangle34.jpg" alt="Must be picture" width="350" height="262">
                         <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
                         <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet
