--- a/module-04/index.html
+++ b/module-04/index.html
@@ -13,7 +13,10 @@
 <body>
     <header class="main-header container ">
         <nav class="main-navigation clearfix">
-            <a href="" class="logo-name">Mart</a>
+            <a href="#" class="site-logo">Mart
+                <img src="/" class="img-logo visually-hidden" alt="name brand and company" width="189" height="24">
+            </a>
+
             <ul class="navigation-items">
                 <li>
                     <a href="#">Home</a>
@@ -38,15 +41,31 @@
     </header>
 
     <main class="main-content container">
-        <section class="main-section clearfix">
+        <section class="main-section-product clearfix">
             <h2 class="main-title">FEATURED PRODUCTS</h2>
-            <ul class="items-products">
+            <ul class="items-products clearfix">
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-041.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">Blue Tshirt</a>
-                        <a href="#" class="price-product">$26</a>
-                    </div>
+
+                    <!-- <div class="product"> -->
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="/img/img-041.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">Blue Tshirt</span>
+                            <span class="product-price">$26</span>
+                        </div>
+
+                    </a>
+                    <!-- </div> -->
+
+
+                    <!-- <a href="#" class="product">
+                        <img src="img/img-041.jpg" alt="name brand and company" width="" height="">
+                        <p class="name-product">Blue Tshirt</p>
+                        <p class="price-product">$26</p>
+                    </a> -->
+
                 </li>
                 <li class="item-products">
                     <div class="product">
@@ -100,7 +119,7 @@
             </ul>
         </section>
 
-        <section class="main-section clearfix">
+        <section class="main-section-news clearfix">
             <h2 class="main-title-news">LATEST NEWS</h2>
             <ul class="items-news">
                 <li class="item-news">
