--- a/module-04/index.html
+++ b/module-04/index.html
@@ -45,115 +45,147 @@
             <h2 class="main-title">FEATURED PRODUCTS</h2>
             <ul class="items-products clearfix">
                 <li class="item-products">
-
-                    <!-- <div class="product"> -->
                     <a href="#" class="product-link">
                         <div class="product-img-wrp">
-                            <img src="/img/img-041.jpg" alt="name of brand and shop" class="product-img">
+                            <img src="img/img-041.jpg" alt="name of brand and shop" class="product-img">
                         </div>
                         <div class="product-text-wrp clearfix">
                             <span class="product-title">Blue Tshirt</span>
                             <span class="product-price">$26</span>
                         </div>
-
                     </a>
-                    <!-- </div> -->
-
-
-                    <!-- <a href="#" class="product">
-                        <img src="img/img-041.jpg" alt="name brand and company" width="" height="">
-                        <p class="name-product">Blue Tshirt</p>
-                        <p class="price-product">$26</p>
-                    </a> -->
-
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-042.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">WOMAN shirt</a>
-                        <a href="#" class="price-product">$31</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-042.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">Woman shirt</span>
+                            <span class="product-price">$31</span>
+                        </div>
+                    </a>
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-043.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">YELLOW Tshirt</a>
-                        <a href="#" class="price-product">$21</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-043.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">YELLOW Tshirt</span>
+                            <span class="product-price">$21</span>
+                        </div>
+                    </a>
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-044.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">Cool lingerie</a>
-                        <a href="#" class="price-product">$56</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-044.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">Cool lingerie</span>
+                            <span class="product-price">$56</span>
+                        </div>
+                    </a>
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-045.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">Blue Tshirt</a>
-                        <a href="#" class="price-product">$26</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-045.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">Blue Tshirt</span>
+                            <span class="product-price">$26</span>
+                        </div>
+                    </a>
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-046.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">WOMAN shirt</a>
-                        <a href="#" class="price-product">$31</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-046.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">Woman shirt</span>
+                            <span class="product-price">$31</span>
+                        </div>
+                    </a>
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-047.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">YELLOW Tshirt</a>
-                        <a href="#" class="price-product">$21</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-047.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">YELLOW Tshirt</span>
+                            <span class="product-price">$21</span>
+                        </div>
+                    </a>
                 </li>
                 <li class="item-products">
-                    <div class="product">
-                        <a href="#"><img src="img/img-048.jpg" alt="Must be picture" width="255" height="282"></a>
-                        <a href="#" class="name-product">Cool lingerie</a>
-                        <a href="#" class="price-product">$56</a>
-                    </div>
+                    <a href="#" class="product-link">
+                        <div class="product-img-wrp">
+                            <img src="img/img-048.jpg" alt="name of brand and shop" class="product-img">
+                        </div>
+                        <div class="product-text-wrp clearfix">
+                            <span class="product-title">Cool lingerie</span>
+                            <span class="product-price">$56</span>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </section>
 
         <section class="main-section-news clearfix">
             <h2 class="main-title-news">LATEST NEWS</h2>
-            <ul class="items-news">
+            <ul class="items-news clearfix">
+
                 <li class="item-news">
-                    <div class="news">
-                        <img src="img/Rectangle32.jpg" alt="Must be picture" width="350" height="262">
-                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-                        <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                    <div class="content-img-wrp">
+                        <img src="img/Rectangle32.jpg" alt="name of a news article " class="news-img">
+                    </div>
+                    <div class="content-text-wrp">
+                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean
+                        </p>
+                        <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate cursus a sit amet
-                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-                        <div class="download">
+                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    </div>
+                    <div class="download-news">
+                        <button class="download-button">Read More</button>
+                    </div>
+                </li>
+
+                <li class="item-news">
+                    <div class="content-news-item clearfix">
+                        <div class="content-img-wrp">
+                            <img src="img/Rectangle33.jpg" alt="name of a news article " class="news-img">
+                        </div>
+                        <div class="content-text-wrp clearfix">
+                            <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean
+                            </p>
+                            <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                                vulputate cursus a sit amet
+                                mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                        </div>
+                        <div class="download-news">
                             <button class="download-button">Read More</button>
                         </div>
                     </div>
                 </li>
+
                 <li class="item-news">
-                    <div class="news">
-                        <img src="img/Rectangle33.jpg" alt="Must be picture" width="350" height="262">
-                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-                        <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet
-                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-                        <div class="download">
-                            <button class="download-button">Read More</button>
+                    <div class="content-news-item clearfix">
+                        <div class="content-img-wrp">
+                            <img src="img/Rectangle34.jpg" alt="name of a news article " class="news-img">
                         </div>
-                    </div>
-                </li>
-                <li class="item-news">
-                    <div class="news">
-                        <img src="img/Rectangle34.jpg" alt="Must be picture" width="350" height="262">
-                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
-                        <p class="news-content">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet
-                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-                        <div class="download">
+                        <div class="content-text-wrp clearfix">
+                            <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean
+                            </p>
+                            <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                                vulputate cursus a sit amet
+                                mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                        </div>
+                        <div class="download-news">
                             <button class="download-button">Read More</button>
                         </div>
                     </div>
@@ -162,7 +194,7 @@
         </section>
     </main>
 
-    <footer class="main-footer container">
+    <footer class="main-footer clearfix container ">
         <h2 class="footer-title visually-hidden">Footer Title</h2>
     </footer>
 
