Finished correction after validation

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -14,7 +14,7 @@
     <header class="main-header container ">
         <nav class="main-navigation clearfix">
             <a href="#" class="site-logo">Mart
-                <img src="/" class="img-logo visually-hidden" alt="name brand and company" width="189" height="24">
+                <img src="img/logo.png" class="img-logo visually-hidden" alt="name brand and company" width="189" height="24">
             </a>
 
             <ul class="navigation-items">
