--- a/module-05/index.html
+++ b/module-05/index.html
@@ -12,8 +12,8 @@
 
 <body>
 
-    <header class="main-header container ">
-        <nav class="main-navigation clearfix">
+    <header class="main-header">
+        <nav class="main-navigation container clearfix">
             <a href="#" class="site-logo">Mart
                 <img src="img/logo.png" class="img-logo visually-hidden" alt="name brand and company" width="189"
                     height="24">
@@ -42,14 +42,32 @@
         </nav>
     </header>
 
-    <main class="main-content container">
-        <section class="main-section-product clearfix">
-            <h2 class="main-title">FEATURED PRODUCTS</h2>
+    <main class="main-content">
+        <section class="slider container">
+            <button class="slider-ctrl slider-ctrl-prev"><img class="button-image" src="./img/butt1.png"
+                    alt="Prev"></button>
+            <button class="slider-ctrl slider-ctrl-next"><img class="button-image" src="./img/butt2.png"
+                    alt="Next"></button>
+            <ul class="slides">
+                <li class="slides-item">
+                    <img class="slides-image" src="./img/slide4.png" alt="Affordable Paris tours" height="600">
+                    <div class="slides-description">
+                        <h3 class="slides-title">AFFORDABLE PARIS TOURS</h3>
+                        <p class="slides-text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+
+
+        <section class="main-section-product clearfix container">
+            <h2 class="main-title">NEW COLLECTION</h2>
             <ul class="items-products clearfix">
                 <li class="item-products">
                     <a href="#" class="product-link">
                         <div class="product-img-wrp">
-                            <img src="img/img-041.jpg" alt="name of brand and shop" class="product-img">
+                            <img src="./img/img51.png" alt="name of brand and shop" class="product-img">
                         </div>
                         <div class="product-text-wrp clearfix">
                             <span class="product-title">Blue Tshirt</span>
@@ -60,7 +78,7 @@
                 <li class="item-products">
                     <a href="#" class="product-link">
                         <div class="product-img-wrp">
-                            <img src="img/img-042.jpg" alt="name of brand and shop" class="product-img">
+                            <img src="./img/img52.png" alt="name of brand and shop" class="product-img">
                         </div>
                         <div class="product-text-wrp clearfix">
                             <span class="product-title">Woman shirt</span>
@@ -71,7 +89,7 @@
                 <li class="item-products">
                     <a href="#" class="product-link">
                         <div class="product-img-wrp">
-                            <img src="img/img-043.jpg" alt="name of brand and shop" class="product-img">
+                            <img src="./img/img53.png" alt="name of brand and shop" class="product-img">
                         </div>
                         <div class="product-text-wrp clearfix">
                             <span class="product-title">YELLOW Tshirt</span>
@@ -82,7 +100,7 @@
                 <li class="item-products">
                     <a href="#" class="product-link">
                         <div class="product-img-wrp">
-                            <img src="img/img-044.jpg" alt="name of brand and shop" class="product-img">
+                            <img src="./img/img54.png" alt="name of brand and shop" class="product-img">
                         </div>
                         <div class="product-text-wrp clearfix">
                             <span class="product-title">Cool lingerie</span>
@@ -90,114 +108,27 @@
                         </div>
                     </a>
                 </li>
-                <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="img/img-045.jpg" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">Blue Tshirt</span>
-                            <span class="product-price">$26</span>
-                        </div>
-                    </a>
-                </li>
-                <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="img/img-046.jpg" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">Woman shirt</span>
-                            <span class="product-price">$31</span>
-                        </div>
-                    </a>
-                </li>
-                <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="img/img-047.jpg" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">YELLOW Tshirt</span>
-                            <span class="product-price">$21</span>
-                        </div>
-                    </a>
-                </li>
-                <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="img/img-048.jpg" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">Cool lingerie</span>
-                            <span class="product-price">$56</span>
-                        </div>
-                    </a>
-                </li>
+
             </ul>
         </section>
 
-        <section class="main-section-news clearfix">
-            <h2 class="main-title-news">LATEST NEWS</h2>
-            <ul class="items-news clearfix">
 
-                <li class="item-news">
-                    <div class="content-img-wrp">
-                        <img src="img/Rectangle32.jpg" alt="name of a news article " class="news-img">
-                    </div>
-                    <div class="content-text-wrp">
-                        <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean
-                        </p>
-                        <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                            vulputate cursus a sit amet
-                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    </div>
-                    <div class="download-news">
-                        <button class="download-button">Read More</button>
-                    </div>
-                </li>
-
-                <li class="item-news">
-                    <div class="content-news-item clearfix">
-                        <div class="content-img-wrp">
-                            <img src="img/Rectangle33.jpg" alt="name of a news article " class="news-img">
-                        </div>
-                        <div class="content-text-wrp clearfix">
-                            <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean
-                            </p>
-                            <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                                vulputate cursus a sit amet
-                                mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                        </div>
-                        <div class="download-news">
-                            <button class="download-button">Read More</button>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="item-news">
-                    <div class="content-news-item clearfix">
-                        <div class="content-img-wrp">
-                            <img src="img/Rectangle34.jpg" alt="name of a news article " class="news-img">
-                        </div>
-                        <div class="content-text-wrp clearfix">
-                            <p class="news-name">Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean
-                            </p>
-                            <p class="news-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                                vulputate cursus a sit amet
-                                mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                        </div>
-                        <div class="download-news">
-                            <button class="download-button">Read More</button>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </section>
     </main>
 
-    <footer class="main-footer clearfix container ">
+    <footer class="main-footer">
         <h2 class="footer-title visually-hidden">Footer Title</h2>
+        <ul class="footer-items container">
+            <li class="footer-item">
+                <a class="footer-item-link" href="#" target="_blank" title="All Rights Reserved © Dokan">
+                    <span class="footer-text">All Rights Reserved © Dokan |</span>
+                </a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-item-link" href="#" target="_blank" title="Designed ThemenGraph">
+                    <span class="footer-text">Designed ThemenGraph</span>
+                </a>
+            </li>
+        </ul>
     </footer>
 
 </body>
