I am redoing the slider

--- a/module-05/index.html
+++ b/module-05/index.html
@@ -50,10 +50,13 @@
                     alt="Next"></button>
             <ul class="slides">
                 <li class="slides-item">
-                    <img class="slides-image" src="./img/slide4.png" alt="Affordable Paris tours" height="600">
-                    <div class="slides-description">
-                        <h3 class="slides-title">AFFORDABLE PARIS TOURS</h3>
-                        <p class="slides-text">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                    <div class="overlay">
+                        <!-- <img src="./img/background1.png" alt="" srcset=""> -->
+                        <!-- <img class="slides-image" src="./img/slide4.png" alt="Affordable Paris tours" height="600"> -->
+                        <div class="slides-content">
+                            <h3 class="slides-title">AFFORDABLE PARIS TOURS</h3>
+                            <p class="slides-description">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                        </div>
                     </div>
                 </li>
             </ul>
