--- a/module-05/index.html
+++ b/module-05/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <main class="main-content">
-        <section class="slider container">
+        <section class="slider">
             <button class="slider-ctrl slider-ctrl-prev"><img class="button-image" src="./img/butt1.png"
                     alt="Prev"></button>
             <button class="slider-ctrl slider-ctrl-next"><img class="button-image" src="./img/butt2.png"
@@ -51,8 +51,6 @@
             <ul class="slides">
                 <li class="slides-item">
                     <div class="overlay">
-                        <!-- <img src="./img/background1.png" alt="" srcset=""> -->
-                        <!-- <img class="slides-image" src="./img/slide4.png" alt="Affordable Paris tours" height="600"> -->
                         <div class="slides-content">
                             <h3 class="slides-title">AFFORDABLE PARIS TOURS</h3>
                             <p class="slides-description">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
