Section New collection added structure icons

--- a/module-05/index.html
+++ b/module-05/index.html
@@ -67,6 +67,23 @@
             <ul class="items-products clearfix">
                 <li class="item-products">
                     <a href="#" class="product-link">
+                        <ul class="icon-button-items">
+                            <div class="icon-button-social clearfix">
+                                <li class="icon-button">
+                                    <a href="http://" class="icon-like">
+                                        <span class="visually-hidden">Like</span></a>
+                                </li>
+                                <li class="icon-button"><a href="http://" class="icon-exchange"><span
+                                            class="visually-hidden">Exchange</span></a>
+                                </li>
+                                <li class="icon-button"><a href="http://" class="icon-time"><span
+                                            class="visually-hidden">Time</span></a>
+                                </li>
+                            </div>
+                            <li class="icon-button-basket"><a href="http://" class="icon-basket"><span
+                                        class="visually-hidden">Basket</span></a>
+                            </li>
+                        </ul>
                         <div class="product-img-wrp">
                             <img src="./img/img51.png" alt="name of brand and shop" class="product-img">
                         </div>
