--- a/module-05/index.html
+++ b/module-05/index.html
@@ -60,38 +60,43 @@
             </ul>
         </section>
 
-
-
         <section class="main-section-product clearfix container">
             <h2 class="main-title">NEW COLLECTION</h2>
             <ul class="items-products clearfix">
                 <li class="item-products">
-                    <a href="#" class="product-link">
-                        <ul class="icon-button-items">
-                            <div class="icon-button-social clearfix">
-                                <li class="icon-button">
-                                    <a href="http://" class="icon-like">
-                                        <span class="visually-hidden">Like</span></a>
-                                </li>
-                                <li class="icon-button"><a href="http://" class="icon-exchange"><span
-                                            class="visually-hidden">Exchange</span></a>
-                                </li>
-                                <li class="icon-button"><a href="http://" class="icon-time"><span
-                                            class="visually-hidden">Time</span></a>
-                                </li>
-                            </div>
-                            <li class="icon-button-basket"><a href="http://" class="icon-basket"><span
-                                        class="visually-hidden">Basket</span></a>
+                    <a href="#" class="product-link"></a>
+                    <ul class="icon-button-items">
+                        <div class="icon-button-social clearfix">
+                            <li class="icon-button">
+                                <a href="http://" class="icon-like">
+                                    <span class="visually-hidden">Like</span>
+                                </a>
                             </li>
-                        </ul>
-                        <div class="product-img-wrp">
-                            <img src="./img/img51.png" alt="name of brand and shop" class="product-img">
+                            <li class="icon-button">
+                                <a href="http://" class="icon-exchange">
+                                    <span class="visually-hidden">Exchange</span>
+                                </a>
+                            </li>
+                            <li class="icon-button">
+                                <a href="http://" class="icon-time">
+                                    <span class="visually-hidden">Time</span>
+                                </a>
+                            </li>
                         </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">Blue Tshirt</span>
-                            <span class="product-price">$26</span>
-                        </div>
-                    </a>
+                        <li class="icon-button-basket">
+                            <a href="http://" class="icon-basket">
+                                <span class="icon-basket-content">Add to cart</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="product-img-wrp">
+                        <img src="./img/img51.png" alt="name of brand and shop" class="product-img">
+                    </div>
+                    <div class="product-text-wrp clearfix">
+                        <span class="product-title">Blue Tshirt</span>
+                        <span class="product-price">$26</span>
+                    </div>
+
                 </li>
                 <li class="item-products">
                     <a href="#" class="product-link">
