After validation service

--- a/module-05/index.html
+++ b/module-05/index.html
@@ -64,27 +64,24 @@
             <h2 class="main-title">NEW COLLECTION</h2>
             <ul class="items-products clearfix">
                 <li class="item-products">
-                    <a href="#" class="product-link"></a>
                     <ul class="icon-button-items">
-                        <div class="icon-button-social clearfix">
-                            <li class="icon-button">
-                                <a href="http://" class="icon-like">
-                                    <span class="visually-hidden">Like</span>
-                                </a>
-                            </li>
-                            <li class="icon-button">
-                                <a href="http://" class="icon-exchange">
-                                    <span class="visually-hidden">Exchange</span>
-                                </a>
-                            </li>
-                            <li class="icon-button">
-                                <a href="http://" class="icon-time">
-                                    <span class="visually-hidden">Time</span>
-                                </a>
-                            </li>
-                        </div>
+                        <li class="icon-button">
+                            <a href="#" class="icon-like">
+                                <span class="visually-hidden">Like</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-exchange">
+                                <span class="visually-hidden">Exchange</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-time">
+                                <span class="visually-hidden">Time</span>
+                            </a>
+                        </li>
                         <li class="icon-button-basket">
-                            <a href="http://" class="icon-basket">
+                            <a href="#" class="icon-basket">
                                 <span class="icon-basket-content">Add to cart</span>
                             </a>
                         </li>
@@ -96,45 +93,102 @@
                         <span class="product-title">Blue Tshirt</span>
                         <span class="product-price">$26</span>
                     </div>
-
                 </li>
                 <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="./img/img52.png" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">Woman shirt</span>
-                            <span class="product-price">$31</span>
-                        </div>
-                    </a>
+                    <ul class="icon-button-items">
+                        <li class="icon-button">
+                            <a href="#" class="icon-like">
+                                <span class="visually-hidden">Like</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-exchange">
+                                <span class="visually-hidden">Exchange</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-time">
+                                <span class="visually-hidden">Time</span>
+                            </a>
+                        </li>
+                        <li class="icon-button-basket">
+                            <a href="#" class="icon-basket">
+                                <span class="icon-basket-content">Add to cart</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="product-img-wrp">
+                        <img src="./img/img52.png" alt="name of brand and shop" class="product-img">
+                    </div>
+                    <div class="product-text-wrp clearfix">
+                        <span class="product-title">Woman shirt</span>
+                        <span class="product-price">$31</span>
+                    </div>
                 </li>
                 <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="./img/img53.png" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">YELLOW Tshirt</span>
-                            <span class="product-price">$21</span>
-                        </div>
-                    </a>
+                    <ul class="icon-button-items">
+                        <li class="icon-button">
+                            <a href="#" class="icon-like">
+                                <span class="visually-hidden">Like</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-exchange">
+                                <span class="visually-hidden">Exchange</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-time">
+                                <span class="visually-hidden">Time</span>
+                            </a>
+                        </li>
+                        <li class="icon-button-basket">
+                            <a href="#" class="icon-basket">
+                                <span class="icon-basket-content">Add to cart</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="product-img-wrp">
+                        <img src="./img/img53.png" alt="name of brand and shop" class="product-img">
+                    </div>
+                    <div class="product-text-wrp clearfix">
+                        <span class="product-title">YELLOW Tshirt</span>
+                        <span class="product-price">$21</span>
+                    </div>
                 </li>
                 <li class="item-products">
-                    <a href="#" class="product-link">
-                        <div class="product-img-wrp">
-                            <img src="./img/img54.png" alt="name of brand and shop" class="product-img">
-                        </div>
-                        <div class="product-text-wrp clearfix">
-                            <span class="product-title">Cool lingerie</span>
-                            <span class="product-price">$56</span>
-                        </div>
-                    </a>
+                    <ul class="icon-button-items">
+                        <li class="icon-button">
+                            <a href="#" class="icon-like">
+                                <span class="visually-hidden">Like</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-exchange">
+                                <span class="visually-hidden">Exchange</span>
+                            </a>
+                        </li>
+                        <li class="icon-button">
+                            <a href="#" class="icon-time">
+                                <span class="visually-hidden">Time</span>
+                            </a>
+                        </li>
+                        <li class="icon-button-basket">
+                            <a href="#" class="icon-basket">
+                                <span class="icon-basket-content">Add to cart</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="product-img-wrp">
+                        <img src="./img/img54.png" alt="name of brand and shop" class="product-img">
+                    </div>
+                    <div class="product-text-wrp clearfix">
+                        <span class="product-title">Cool lingerie</span>
+                        <span class="product-price">$56</span>
+                    </div>
                 </li>
-
             </ul>
         </section>
-
 
     </main>
 
