Correction after validation

--- a/module-05/index.html
+++ b/module-05/index.html
@@ -14,29 +14,28 @@
 
     <header class="main-header">
         <nav class="main-navigation container clearfix">
-            <a href="#" class="site-logo">Mart
-                <img src="img/logo.png" class="img-logo visually-hidden" alt="name brand and company" width="189"
-                    height="24">
+            <a href="#" class="site-logo">
+                <img src="./img/logo2.png" class="img-logo" alt="name brand and company" width="78" height="22">
             </a>
 
             <ul class="navigation-items">
-                <li>
-                    <a href="#">Home</a>
+                <li class="navigation-item">
+                    <a href="#" class="menu-item">Home</a>
                 </li>
-                <li>
-                    <a href="#">About us</a>
+                <li class="navigation-item">
+                    <a href="#" class="menu-item">About us</a>
                 </li>
-                <li>
-                    <a href="#">Page</a>
+                <li class="navigation-item">
+                    <a href="#" class="menu-item">Page</a>
                 </li>
-                <li>
-                    <a href="#">Shop</a>
+                <li class="navigation-item">
+                    <a href="#" class="menu-item">Shop</a>
                 </li>
-                <li>
-                    <a href="#">Blog</a>
+                <li class="navigation-item">
+                    <a href="#" class="menu-item">Blog</a>
                 </li>
-                <li>
-                    <a href="#">Contact us</a>
+                <li class="navigation-item">
+                    <a href="#" class="menu-item">Contact us</a>
                 </li>
             </ul>
         </nav>
@@ -44,10 +43,8 @@
 
     <main class="main-content">
         <section class="slider">
-            <button class="slider-ctrl slider-ctrl-prev"><img class="button-image" src="./img/butt1.png"
-                    alt="Prev"></button>
-            <button class="slider-ctrl slider-ctrl-next"><img class="button-image" src="./img/butt2.png"
-                    alt="Next"></button>
+            <button class="slider-button left-arrow"></button>
+            <button class="slider-button right-arrow"></button>
             <ul class="slides">
                 <li class="slides-item">
                     <div class="overlay">
@@ -60,28 +57,28 @@
             </ul>
         </section>
 
-        <section class="main-section-product clearfix container">
+        <section class="main-section-product container">
             <h2 class="main-title">NEW COLLECTION</h2>
             <ul class="items-products clearfix">
                 <li class="item-products">
                     <ul class="icon-button-items">
                         <li class="icon-button">
-                            <a href="#" class="icon-like">
+                            <a href="#" class="icon-link icon-link-like">
                                 <span class="visually-hidden">Like</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-exchange">
+                            <a href="#" class="icon-link icon-link-exchange">
                                 <span class="visually-hidden">Exchange</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-time">
+                            <a href="#" class="icon-link icon-link-time">
                                 <span class="visually-hidden">Time</span>
                             </a>
                         </li>
                         <li class="icon-button-basket">
-                            <a href="#" class="icon-basket">
+                            <a href="#" class="icon-link icon-link-basket">
                                 <span class="icon-basket-content">Add to cart</span>
                             </a>
                         </li>
@@ -97,22 +94,22 @@
                 <li class="item-products">
                     <ul class="icon-button-items">
                         <li class="icon-button">
-                            <a href="#" class="icon-like">
+                            <a href="#" class="icon-link icon-link-like">
                                 <span class="visually-hidden">Like</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-exchange">
+                            <a href="#" class="icon-link icon-link-exchange">
                                 <span class="visually-hidden">Exchange</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-time">
+                            <a href="#" class="icon-link icon-link-time">
                                 <span class="visually-hidden">Time</span>
                             </a>
                         </li>
                         <li class="icon-button-basket">
-                            <a href="#" class="icon-basket">
+                            <a href="#" class="icon-link icon-link-basket">
                                 <span class="icon-basket-content">Add to cart</span>
                             </a>
                         </li>
@@ -128,22 +125,22 @@
                 <li class="item-products">
                     <ul class="icon-button-items">
                         <li class="icon-button">
-                            <a href="#" class="icon-like">
+                            <a href="#" class="icon-link icon-link-like">
                                 <span class="visually-hidden">Like</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-exchange">
+                            <a href="#" class="icon-link icon-link-exchange">
                                 <span class="visually-hidden">Exchange</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-time">
+                            <a href="#" class="icon-link icon-link-time">
                                 <span class="visually-hidden">Time</span>
                             </a>
                         </li>
                         <li class="icon-button-basket">
-                            <a href="#" class="icon-basket">
+                            <a href="#" class="icon-link icon-link-basket">
                                 <span class="icon-basket-content">Add to cart</span>
                             </a>
                         </li>
@@ -159,22 +156,22 @@
                 <li class="item-products">
                     <ul class="icon-button-items">
                         <li class="icon-button">
-                            <a href="#" class="icon-like">
+                            <a href="#" class="icon-link icon-link-like">
                                 <span class="visually-hidden">Like</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-exchange">
+                            <a href="#" class="icon-link icon-link-exchange">
                                 <span class="visually-hidden">Exchange</span>
                             </a>
                         </li>
                         <li class="icon-button">
-                            <a href="#" class="icon-time">
+                            <a href="#" class="icon-link icon-link-time">
                                 <span class="visually-hidden">Time</span>
                             </a>
                         </li>
                         <li class="icon-button-basket">
-                            <a href="#" class="icon-basket">
+                            <a href="#" class="icon-link icon-link-basket">
                                 <span class="icon-basket-content">Add to cart</span>
                             </a>
                         </li>
