--- a/module-06/index.html
+++ b/module-06/index.html
@@ -27,84 +27,78 @@
         </nav>
     </header>
 
-    <main class="main-content">
-        <h1 class="main-title">Title</h1>
+    <main class="main-content container">
+        <h1 class="main-title visually-hidden">Title</h1>
 
         <section class="services-section">
-            <h2 class="section-title">Title</h2>
+            <span class="title-slogan">We work with</span>
+            <h2 class="section-title">Amazing Services</h2>
             <ul class="servises">
-                <li class="servise-item">
-                    <h3>Title</h3>
-                    <p>Text</p>
+                <li class="servise-item icon-alarm">
+                    <h3 class="title-item">Photography</h3>
+                    <p class="text-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </p>
                 </li>
-                <li class="servise-item">
-                    <h3>Title</h3>
-                    <p>Text</p>
+                <li class="servise-item icon-graph">
+                    <h3 class="title-item">Web Design</h3>
+                    <p class="text-item">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li class="servise-item">
-                    <h3>Title</h3>
-                    <p>Text</p>
+                <li class="servise-item icon-computer">
+                    <h3 class="title-item">Creativity</h3>
+                    <p class="text-item">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li class="servise-item">
-                    <h3>Title</h3>
-                    <p>Text</p>
+                <li class="servise-item icon-book">
+                    <h3 class="title-item">seo</h3>
+                    <p class="text-item">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                 </li>
-                <li class="servise-item">
-                    <h3>Title</h3>
-                    <p>Text</p>
+                <li class="servise-item icon-home">
+                    <h3 class="title-item">Css/Html</h3>
+                    <p class="text-item">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
                 </li>
-                <li class="servise-item">
-                    <h3>Title</h3>
-                    <p>Text</p>
+                <li class="servise-item icon-image">
+                    <h3 class="title-item">digital</h3>
+                    <p class="text-item">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
             </ul>
         </section>
 
         <section class="team-section">
-            <h2 class="section-title">Title</h2>
-            <p>Text</p>
+            <span class="title-slogan">We work with</span>
+            <h2 class="section-title">Meet our team</h2>
+            <p class="text-item text-item-team">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             <ul class="team-items">
                 <li class="team-item">
                     <div class="cart">
                         <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link4</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link1</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link2</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link3</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link4</a></li>
                         </ul>
                     </div>
                 </li>
                 <li class="team-item">
                     <div class="cart">
                         <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link4</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link1</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link2</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link3</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link4</a></li>
                         </ul>
                     </div>
                 </li>
                 <li class="team-item">
                     <div class="cart">
                         <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link4</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link1</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link2</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link3</a></li>
+                            <li class="icon-link"><a href="#" class="team-link">Link4</a></li>
                         </ul>
                     </div>
                 </li>
-                <li class="team-item">
-                    <div class="cart">
-                        <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="link">Link4</a></li>
-                        </ul>
-                    </div>
-                </li>
-
             </ul>
         </section>
     </main>
