--- a/module-06/index.html
+++ b/module-06/index.html
@@ -70,14 +70,31 @@
                 ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             <ul class="team-items">
                 <li class="team-item">
-                    <div class="cart">
+                    <!-- <div class="cart"> -->
+                        <img class="img-team" src="./img/img1.png" alt="member of our team" >
                         <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="team-link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link4</a></li>
+                            <li class="team-link">
+                                <a class="icon-link icon-facebook" href="#">
+                                    <span class="visually-hidden">Facebook</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-twitter" href="#">
+                                    <span class="visually-hidden">Twitter</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-pinterest" href="#">
+                                    <span class="visually-hidden">Pinterest</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-instagram" href="#">
+                                    <span class="visually-hidden">Instagram</span>
+                                </a>
+                            </li>
                         </ul>
-                    </div>
+                    <!-- </div> -->
                 </li>
                 <li class="team-item">
                     <div class="cart">
