The main part is completed

--- a/module-06/index.html
+++ b/module-06/index.html
@@ -69,9 +69,8 @@
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                 ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             <ul class="team-items">
-                <li class="team-item">
-                    <!-- <div class="cart"> -->
-                        <img class="img-team" src="./img/img1.png" alt="member of our team" >
+                <li class="team-item team-item-graphic">
+                    <div class="cart">
                         <ul class="icon-socials">
                             <li class="team-link">
                                 <a class="icon-link icon-facebook" href="#">
@@ -94,33 +93,71 @@
                                 </a>
                             </li>
                         </ul>
-                    <!-- </div> -->
+                    </div>
+                    <p class="team-item-name">Matthew Dix</p>
+                    <p class="team-item-occupation">Graphic Design</p>
                 </li>
-                <li class="team-item">
+                <li class="team-item team-item-branding">
                     <div class="cart">
                         <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="team-link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link4</a></li>
+                            <li class="team-link">
+                                <a class="icon-link icon-facebook" href="#">
+                                    <span class="visually-hidden">Facebook</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-twitter" href="#">
+                                    <span class="visually-hidden">Twitter</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-pinterest" href="#">
+                                    <span class="visually-hidden">Pinterest</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-instagram" href="#">
+                                    <span class="visually-hidden">Instagram</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
+                    <p class="team-item-name">Christopher Campbell</p>
+                    <p class="team-item-occupation">Branding/UX design</p>
                 </li>
-                <li class="team-item">
+                <li class="team-item team-item-developer">
                     <div class="cart">
                         <ul class="icon-socials">
-                            <li class="icon-link"><a href="#" class="team-link">Link1</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link2</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link3</a></li>
-                            <li class="icon-link"><a href="#" class="team-link">Link4</a></li>
+                            <li class="team-link">
+                                <a class="icon-link icon-facebook" href="#">
+                                    <span class="visually-hidden">Facebook</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-twitter" href="#">
+                                    <span class="visually-hidden">Twitter</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-pinterest" href="#">
+                                    <span class="visually-hidden">Pinterest</span>
+                                </a>
+                            </li>
+                            <li class="team-link">
+                                <a class="icon-link icon-instagram" href="#">
+                                    <span class="visually-hidden">Instagram</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
+                    <p class="team-item-name">Michael Fertig</p>
+                    <p class="team-item-occupation">Developer</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer container">
         <p>Text</p>
         <input type="text" class="input-field">YourEmail
         <button class="button">Text</button>
